unpackaged/main/default/objects/filegen__File_Control_Record__c/filegen__File_Control_Record__c.object-meta.xml
<CustomObject>
    <label>File Control Record</label>
    <nameField>
        <displayFormat>FCR-{0000000000}</displayFormat>
        <label>File Control Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Control Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>