unpackaged/main/default/objects/filegen__File_Control_Record__c/fields/filegen__Block_Count__c.field-meta.xml
<CustomField>
    <fullName>filegen__Block_Count__c</fullName>
    <label>Block Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>