unpackaged/main/default/objects/filegen__File_Control_Record__c/fields/filegen__Entry_Addenda_Count__c.field-meta.xml
<CustomField>
    <fullName>filegen__Entry_Addenda_Count__c</fullName>
    <label>Entry/Addenda  Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>