unpackaged/main/default/objects/filegen__File_Control_Record__c/fields/filegen__Total_Credit_Entry_Dollar_Amount_in_Fi__c.field-meta.xml
<CustomField>
    <fullName>filegen__Total_Credit_Entry_Dollar_Amount_in_Fi__c</fullName>
    <label>Total Credit  Entry Dollar  Amount in Fi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>