unpackaged/main/default/objects/filegen__File_Control_Record__c/fields/filegen__Total_Debit_Entry_Dollar_Amount_in_Fil__c.field-meta.xml
<CustomField>
    <fullName>filegen__Total_Debit_Entry_Dollar_Amount_in_Fil__c</fullName>
    <label>Total Debit  Entry Dollar  Amount in Fil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>